--- a/app/stylesheets/partials/_form.sass
+++ b/app/stylesheets/partials/_form.sass
@@ -900,19 +900,20 @@ p.input-hints
       font-size: 11px
       line-height: 1.6
       &.currency
-        background: #bbb
+        background: #ccc
         color: #fff
         display: inline-block
         font-size: 11px
-        min-height: 17px
-        min-width: 22px
-        padding: 6px 3px 5px
+        height: 25px
+        line-height: 25px
+        padding: 3px
         position: relative
         text-align: center
-        top: -8px
+        top: -7px
+        width: 25px
         +border-radius(20px)
         +box-shadow(rgba(0, 0, 0, 0.3) 0 0 3px inset)
-        +text-shadow(#888 0 1px 0)
+        +text-shadow(#888, 0, 0, 1px)
     &.last
       border-right: none
       width: 25.3%
