--- a/app/stylesheets/partials/_shared.sass
+++ b/app/stylesheets/partials/_shared.sass
@@ -80,7 +80,7 @@ hr
   border-top: 3px solid $lightest-blue
   &.heading
     border-top: 1px solid $primary_border4
-    margin: 5px 0 10px
+    margin: 0 0 10px
 
 .clearfix
   +pie-clearfix
